--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                 <!-- 首页分类 -->
                 <div class="cate">
                     <ul>
-                        <!-- <li><a href="#" title=""><i><img src="images/icon_01.png" alt="" /></i><span>限时抢购</span></a></li>
-                        <li><a href="#" title=""><i><img src="images/icon_02.png" alt="" /></i><span>意帝精品</span></a></li> -->
-                        <li><a href="#" title=""><i><img src="images/icon_03.png" alt="" /></i><span>名庄特卖</span></a></li>
-                        <!-- <li><a href="#" title=""><i><img src="images/icon_04.png" alt="" /></i><span>意帝加盟</span></a></li> -->
+                        <!-- <li><a href="#" title=""><i><img src="images/icon_01.png" alt="" /></i><span>限时抢购</span></a></li> -->
+                        <!-- <li><a href="#" title=""><i><img src="images/icon_02.png" alt="" /></i><span>意帝精品</span></a></li> -->
                         <li><a href="#" title=""><i><img src="images/icon_05.png" alt="" /></i><span>我的意帝</span></a></li>
+                        <li><a href="#" title=""><i><img src="images/icon_07.png" alt="" /></i><span>商品列表</span></a></li>
+                        <!-- <li><a href="#" title=""><i><img src="images/icon_04.png" alt="" /></i><span>意帝加盟</span></a></li> -->
                         <li><a href="#" title=""><i><img src="images/icon_06.png" alt="" /></i><span>购物车</span></a></li>
-                        <li><a href="#" title=""><i><img src="images/icon_07.png" alt="" /></i><span>商品分类</span></a></li>
+                        <li><a href="#" title=""><i><img src="images/icon_03.png" alt="" /></i><span>名庄特卖</span></a></li>
                         <!-- <li><a href="#" title=""><i><img src="images/icon_08.png" alt="" /></i><span>vip特惠</span></a></li> -->
                     </ul>
                 </div>
@@ -389,7 +389,7 @@
                         <!-- 已登录 -->
                         <!-- <div class="footer_l"><a href="#">yd-2015415</a>&nbsp;|&nbsp;<a href="#">退出</a></div> -->
 
-                        <div class="footer_r"><a href="#">反馈</a>&nbsp;|&nbsp;<a href="#" class="back_top">回到顶部</a></div>
+                        <div class="footer_r"><a href="#">反馈</a>&nbsp;|&nbsp;<a href="#">回到顶部</a></div>
                     </div>
                     <div class="footer_b">
                         <p>全国免费客服：<i>400-8855-829</i></p>
