--- a/三级分类.html
+++ b/三级分类.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="pa">
-    <div class="main pr">
+	<div class="main pr">
         <!-- 主体部分 -->
         <div class="content">
             <div class="main1 bg">
@@ -25,7 +25,7 @@
 
                     <!-- 内页标题 -->
                     <div class="htit">
-                        <i>个人中心</i>
+                        <i>商品分类</i>
                     </div>
 
                     <!-- 顶部分类 -->
@@ -33,37 +33,67 @@
                         <a href="#" class="iconfont">&#xe604;</a>
                     </div>
                 </div>
+
                 <!-- 头部结束 -->
-                <div class="pshow">
-                    <div class="s_btoux">
-                        <p class="T_txiang"><img src="images/logo2.png" title="" alt="" /></p>
-                        <p class="Thexian"></p>
-                        <p class="srdz">您身边的私人定制专家</p>
-                    </div>
-                    <ul class="Hui_lb clearfix">
+                <div class="classify clearfix">
+                    <ul class="class_list">
                         <li>
-                            <p class="Hui_pic"><img src="images/A_dingdan.png" title="" alt="" /></p>
-                            <p>所有订单</p>
+                            <a href="#">
+                                <em>贵族酒庄</em>
+                                <i class="iconfont">&#xe606;</i>
+                            </a>
                         </li>
                         <li>
-                            <p class="Hui_pic"><img src="images/A_gouwuche.png" title="" alt="" /></p>
-                            <p>购物车</p>
+                            <a href="#">
+                                <em>普拉德罗酒庄</em>
+                                <i class="iconfont">&#xe606;</i>
+                            </a>
                         </li>
                         <li>
-                            <p class="Hui_pic"><img src="images/A_shoucang.png" title="" alt="" /></p>
-                            <p>我的收藏</p>
+                            <a href="#">
+                                <em>财富酒庄</em>
+                                <i class="iconfont">&#xe606;</i>
+                            </a>
                         </li>
                         <li>
-                            <p class="Hui_pic"><img src="images/A_dizhi.png" title="" alt="" /></p>
-                            <p>地址管理</p>
+                            <a href="#">
+                                <em>贵族酒庄</em>
+                                <i class="iconfont">&#xe606;</i>
+                            </a>
                         </li>
                         <li>
-                            <p class="Hui_pic"><img src="images/A_mima.png" title="" alt="" /></p>
-                            <p>修改密码</p>
+                            <a href="#">
+                                <em>普拉德罗酒庄</em>
+                                <i class="iconfont">&#xe606;</i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <em>财富酒庄</em>
+                                <i class="iconfont">&#xe606;</i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <em>贵族酒庄</em>
+                                <i class="iconfont">&#xe606;</i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <em>普拉德罗酒庄</em>
+                                <i class="iconfont">&#xe606;</i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <em>财富酒庄</em>
+                                <i class="iconfont">&#xe606;</i>
+                            </a>
                         </li>
                     </ul>
-                    <div class="Tuichu">退出登录</div>
                 </div>
+                <!-- 主体部分结束 -->
                 <!-- 左下角按钮导航 -->
                 <div id="plug-phone" class="plug-phone">
                     <input type="checkbox" id="plug-btn" class="plug-menu" value="" />
