--- a/分类.html
+++ b/分类.html
@@ -113,6 +113,9 @@
                             </ul>
                         </li>
                     </ul>
+                    <script type="text/javascript">
+                        $('.class_list').sfq();
+                    </script>
                 </div>
                 <!-- 主体部分结束 -->
                 <!-- 左下角按钮导航 -->
