--- a/修改地址.html
+++ b/修改地址.html
@@ -4,105 +4,109 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=2,user-scalable=no">
 <meta name="format-detection" content="telephone=no">
-<title>意帝商城手机端</title>
+<title>袜酷商城手机端</title>
 <link rel="stylesheet" type="text/css" href="css/index.css" />
 <script src="js/zepto.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="js/touch.js"></script>
 <script src="js/index.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/area.js"></script>
 </head>
 
 <body class="pa">
-    <div class="main pr">
-        <!-- 主体部分 -->
-        <div class="content">
-            <div class="main1 bg">
-                <!-- 头部开始 -->
-                <div class="header">
-                    <!-- 返回 -->
-                    <div class="back">
-                        <a href="javascript:history.back(-1)" class="iconfont">&#xe606;</a>
-                    </div>
-
-                    <!-- 内页标题 -->
-                    <div class="htit">
-                        <i>修改地址</i>
-                    </div>
-
-                    <!-- 顶部分类 -->
-                    <div class="hcate">
-                        <a href="#" class="iconfont">&#xe604;</a>
-                    </div>
-                </div>
-                <!-- 头部结束 -->
-                <script type="text/javascript" src="js/area.js"></script>
-                <div class="qxh_show">
-                    <form action="" method="" class="qxh_add_form">
-                        <p>
-                            <label>收件人：</label>
-                            <input type="text" name="" id="" />
-                        </p>
-                        <p>
-                            <label>手机号码：</label>
-                            <input type="tel" name="" id="" />
-                        </p>
-                        <p>
-                            <label>邮政编码：</label>
-                            <input type="text" name="" id="" />
-                        </p>
-                        <p>
-                            <label>所在地区：</label>
-                            <select id="s_province" name="s_province"></select>
-                            <select id="s_city" name="s_city" ></select>
-                            <select id="s_county" name="s_county"></select>
-                            <script type="text/javascript">_init_area();</script>
-                        </p>
-                        <p>
-                            <label>详细地址：</label>
-                            <input type="text" name="" id="" />
-                        </p>
-                        <p class="qxh_add_sub">
-                            <input type="text" name="" id="" value="确认修改地址" />
-                        </p>
-                    </form>
-                </div>
-                <!-- 左下角按钮导航 -->
-                <div id="plug-phone" class="plug-phone">
-                    <input type="checkbox" id="plug-btn" class="plug-menu" value="" />
-                    <div>
-                        <a href="#" class="iconfont">&#xe601;</a>
-                    </div>
-                    <div>
-                        <a href="#" class="iconfont">&#xe604;</a>
-                    </div>
-                    <div>
-                        <a href="#" class="iconfont">&#xe603;</a>
-                    </div>
-                    <div>
-                        <a href="#" class="iconfont">&#xe602;</a>
-                    </div>
-                </div>
-
-                <!-- 底部部分 -->
-                <div class="footer">
-                    <div class="footer_t">
-
-                        <!-- 未登录 -->
-                        <div class="footer_l"><a href="#">登录</a>&nbsp;|&nbsp;<a href="#">注册</a></div>
-
-                        <!-- 已登录 -->
-                        <!-- <div class="footer_l"><a href="#">yd-2015415</a>&nbsp;|&nbsp;<a href="#">退出</a></div> -->
-
-                        <div class="footer_r"><a href="#">反馈</a>&nbsp;|&nbsp;<a href="#" class="back_top">回到顶部</a></div>
-                    </div>
-                    <div class="footer_b">
-                        <p>全国免费客服：<i>400-8855-829</i></p>
-                        <p>©m.yidi9.com&nbsp;上海意帝酒业有限公司</p>
-                    </div>
-                </div>
-                <!-- 底部结束 -->
-            </div>
+  <div class="main pr">
+    <!-- 主体部分 -->
+    <div class="content">
+      <div class="main1">
+        <!-- 头部开始 -->
+        <!-- 头部导航 -->
+        <div class="header_nav w0">
+          <ul>
+            <li><a href="#">专业运动袜</a></li>
+            <li><a href="#">男袜</a></li>
+            <li><a href="#">女袜</a></li>
+            <li><a href="#">童袜</a></li>
+            <li><a href="#">宝宝袜</a></li>
+            <li><a href="#">糖尿病患者专用袜</a></li>
+          </ul>
         </div>
-        <!-- 主体部分结束 -->
+        <!-- 头部导航e -->
+        <div class="header">
+          <!-- 返回s -->
+          <div class="back">
+            <a href="javascript:void(0);" onClick="javascript :history.back(-1);">
+              <i class="iconfont">&#xe60b;</i>
+            </a>
+          </div>
+          <!-- 返回e -->
+          <!-- 搜索框 -->
+          <div class="header_ti">
+            <span>修改地址</span>
+          </div>
+          <!-- 搜索框e -->
+          <!-- 头部导航按钮 -->
+          <div class="header_n iconfont">
+            <a href="javascript:;">
+              &#xe60a;
+            </a>
+          </div>
+          <!-- 头部导航按钮e -->
+        </div>
+        <!-- 头部结束 -->
+
+        <div class="qxh_show qxh_h100">
+          <form action="" method="" class="qxh_add_form">
+            <p>
+              <label>收件人：</label>
+              <input type="text" name="" id="" />
+            </p>
+            <p>
+              <label>手机号码：</label>
+              <input type="tel" name="" id="" />
+            </p>
+            <p>
+              <label>邮政编码：</label>
+              <input type="text" name="" id="" />
+            </p>
+            <p>
+              <label>所在地区：</label>
+              <select id="s_province" name="s_province"></select>
+              <select id="s_city" name="s_city" ></select>
+              <select id="s_county" name="s_county"></select>
+              <script type="text/javascript">_init_area();</script>
+            </p>
+            <p>
+              <label>详细地址：</label>
+              <input type="text" name="" id="" />
+            </p>
+            <p class="qxh_add_sub">
+              <input type="text" name="" id="" value="确认修改地址" />
+            </p>
+          </form>
+        </div>
+
+      </div>
     </div>
+    <!-- 主体部分结束 -->
+    <!-- 底部部分 -->
+    <div class="footer bg pr">
+      <ul>
+        <li class="footer_on"><a href="index.html"><span class="iconfont">&#xe608;</span>首页</a></li>
+        <li><a href="购物车.html"><span class="iconfont">&#xe601;</span>购物车</a></li>
+        <li><a href="javascript:;" class="f_mb"><span class="iconfont">&#xe604;</span>会员中心</a></li>
+        <li><a href="#"><span class="iconfont f_rota">&#xe602;</span>分类</a></li>
+       </ul>
+    </div>
+    <!-- 底部结束 -->
+  </div>
+  <script type="text/javascript">
+  //地区三级联动
+    var Gid  = document.getElementById ;
+    var showArea = function(){
+        Gid('show').innerHTML = "<h3>省" + Gid('s_province').value + " - 市" +
+        Gid('s_city').value + " - 县/区" +
+        Gid('s_county').value + "</h3>"
+                                }
+    Gid('s_county').setAttribute('onchange','showArea()');
+  </script>
 </body>
 </html>
