--- a/我的订单.html
+++ b/我的订单.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=2,user-scalable=no">
 <meta name="format-detection" content="telephone=no">
-<title>意帝商城手机端</title>
+<title>袜酷商城手机端</title>
 <link rel="stylesheet" type="text/css" href="css/index.css" />
 <script src="js/zepto.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="js/touch.js"></script>
@@ -12,30 +12,45 @@
 </head>
 
 <body class="pa">
-    <div class="main pr">
+	<div class="main pr">
         <!-- 主体部分 -->
         <div class="content">
-            <div class="main1 bg">
+            <div class="main1">
                 <!-- 头部开始 -->
+                <!-- 头部导航 -->
+                <div class="header_nav w0">
+                    <ul>
+                        <li><a href="#">专业运动袜</a></li>
+                        <li><a href="#">男袜</a></li>
+                        <li><a href="#">女袜</a></li>
+                        <li><a href="#">童袜</a></li>
+                        <li><a href="#">宝宝袜</a></li>
+                        <li><a href="#">糖尿病患者专用袜</a></li>
+                    </ul>
+                </div>
+                <!-- 头部导航e -->
                 <div class="header">
-                    <!-- 返回 -->
+                    <!-- 返回s -->
                     <div class="back">
-                        <a href="javascript:history.back(-1)" class="iconfont">&#xe606;</a>
+                        <a href="#">
+                            <i class="iconfont">&#xe60b;</i>
+                        </a>
                     </div>
-
-                    <!-- 内页标题 -->
-                    <div class="htit">
-                        <i>个人中心</i>
+                    <!-- 返回e -->
+                    <!-- 搜索框 -->
+                    <div class="header_ti">
+                        <span>确认订单</span>
                     </div>
-
-                    <!-- 顶部分类 -->
-                    <div class="hcate">
-                        <a href="#" class="iconfont">&#xe604;</a>
+                    <!-- 搜索框e -->
+                    <!-- 头部导航按钮 -->
+                    <div class="header_n iconfont">
+                        <a href="javascript:;">
+                            &#xe60a;
+                        </a>
                     </div>
+                    <!-- 头部导航按钮e -->
                 </div>
                 <!-- 头部结束 -->
-
-
                 <div class="section clearfix">
                     <div class="orderList normal">
                         <div class="title">
@@ -62,11 +77,11 @@
                         </div>
                         <ul class="orderInfo">
                             <li>
-                                <img src="images/pic_06.jpg"
+                                <img src="images/pic_01.jpg"
                                 />
                                 <div class="info">
                                     <p class="productName">
-                                        老藤慕斯卡特甜白葡萄酒
+                                        银离子抗菌短款运动女袜
                                     </p>
                                     <p class="count">
                                         <span class="unitPrice">
@@ -122,11 +137,11 @@
                         </div>
                         <ul class="orderInfo">
                             <li>
-                                <img src="images/pic_06.jpg"
+                                <img src="images/pic_01.jpg"
                                 />
                                 <div class="info">
                                     <p class="productName">
-                                        老藤慕斯卡特甜白葡萄酒
+                                        银离子抗菌短款运动女袜
                                     </p>
                                     <p class="count">
                                         <span class="unitPrice">
@@ -182,11 +197,11 @@
                         </div>
                         <ul class="orderInfo">
                             <li>
-                                <img src="images/pic_06.jpg"
+                                <img src="images/pic_01.jpg"
                                 />
                                 <div class="info">
                                     <p class="productName">
-                                        老藤慕斯卡特甜白葡萄酒
+                                        银离子抗菌短款运动女袜
                                     </p>
                                     <p class="count">
                                         <span class="unitPrice">
@@ -214,46 +229,19 @@
                         </div>
                     </div>
                 </div>
-
-
-                <!-- 左下角按钮导航 -->
-                <div id="plug-phone" class="plug-phone">
-                    <input type="checkbox" id="plug-btn" class="plug-menu" value="" />
-                    <div>
-                        <a href="#" class="iconfont">&#xe601;</a>
-                    </div>
-                    <div>
-                        <a href="#" class="iconfont">&#xe604;</a>
-                    </div>
-                    <div>
-                        <a href="#" class="iconfont">&#xe603;</a>
-                    </div>
-                    <div>
-                        <a href="#" class="iconfont">&#xe602;</a>
-                    </div>
-                </div>
-
-                <!-- 底部部分 -->
-                <div class="footer">
-                    <div class="footer_t">
-
-                        <!-- 未登录 -->
-                        <div class="footer_l"><a href="#">登录</a>&nbsp;|&nbsp;<a href="#">注册</a></div>
-
-                        <!-- 已登录 -->
-                        <!-- <div class="footer_l"><a href="#">yd-2015415</a>&nbsp;|&nbsp;<a href="#">退出</a></div> -->
-
-                        <div class="footer_r"><a href="#">反馈</a>&nbsp;|&nbsp;<a href="#" class="back_top">回到顶部</a></div>
-                    </div>
-                    <div class="footer_b">
-                        <p>全国免费客服：<i>400-8855-829</i></p>
-                        <p>©m.yidi9.com&nbsp;上海意帝酒业有限公司</p>
-                    </div>
-                </div>
-                <!-- 底部结束 -->
             </div>
         </div>
         <!-- 主体部分结束 -->
+        <!-- 底部部分 -->
+        <div class="footer bg pr">
+            <ul>
+                <li class="footer_on"><a href="#"><span class="iconfont">&#xe608;</span>首页</a></li>
+                <li><a href="#"><span class="iconfont">&#xe601;</span>购物车</a></li>
+                <li><a href="javascript:;" class="f_mb"><span class="iconfont">&#xe604;</span>会员中心</a></li>
+                <li><a href="#"><span class="iconfont f_rota">&#xe602;</span>分类</a></li>
+             </ul>
+        </div>
+        <!-- 底部结束 -->
     </div>
 </body>
 </html>
